<resources>
    <string name="app_name">Country Clever</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="country_app">Country App</string>
    <string name="start">Start</string>
    <string name="this_is_where_the_randomly_generated_country_s_name_will_be_maybe_add_a_few_facts_here_as_hints">This is where the randomly generated country\'s name will be. Maybe add a few facts here as hints.</string>
    <string name="country_description">Country Description</string>
    <string name="country_name">Country Name</string>
    <string name="country_of_the_day">Country of the Day</string>
    <string name="MC">multiple choice</string>
</resources>